# Measure-in-Goods

./: .gitignore  README.md  pyproject.toml
.github/workflows/: fetch-and-deploy.yml
data/: __init__.py  fetch_sp500_fred.py  fetch_stooq_xauusd.py  fred.py  sample_series.py  world_bank.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/data/: sp500.json  xauusd.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AssetSelector.jsx  BasketSelector.jsx  Button.jsx  ChartDemo.jsx  ChartDisplay(1).jsx  ChartDisplay.jsx  ContentSection.jsx  CustomBasketBuilder.jsx  DataSnapshots.jsx  HeroSection.jsx  NavigationTabs.jsx  NoteCard.jsx  Pill.jsx  SearchSelect.jsx
frontend/src/pages/: About.jsx  Data.jsx  Home.jsx
frontend/src/styles/: theme(1).css  theme.css
src/backend/: __init__.py  app.py  models.py  pricing.py
