[project]
name = "measure-in-goods"
version = "0.1.0"
description = "Experimental platform for comparing purchasing power via goods baskets"
requires-python = ">=3.11"

[project.optional-dependencies]
backend = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "requests>=2.31",
]

[tool.uvicorn]
app = "src.backend.app:app"
host = "0.0.0.0"
port = 8000
reload = true
